<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectionActivity"
    android:id="@+id/container_selection">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/pchbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chchbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:duplicateParentState="true"
        android:text="@string/checkbox"
        app:layout_constraintStart_toEndOf="@id/pchbox"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rbGr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chchbox1">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbt_lightmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/radio_btn_light_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbt_darkmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:checked="false"
            android:text="@string/radio_btn_dark_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbt_defaultmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:checked="true"
            android:text="@string/radio_btn_default_theme" />

    </RadioGroup>


    <com.google.android.material.slider.Slider
        android:id="@+id/slider1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:value="3.0"
        android:valueFrom="0.0"
        android:valueTo="10.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rbGr"
        app:thumbColor="@color/colorAccent"
        app:trackHeight="8dp" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/slider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider1"
        app:values="@array/initial_slider_values" />

</androidx.constraintlayout.widget.ConstraintLayout>